--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # Netlify Configuration File
-# Add this file to the root of your GitHub repository
+# Security Headers - CORRECTED VERSION
+# Allows Google Sheets connection while maintaining Grade A security
 
-# Security Headers
 [[headers]]
   for = "/*"
   [headers.values]
@@ -20,14 +20,14 @@
     # Restrict browser permissions (site doesn't need these)
     Permissions-Policy = "geolocation=(), microphone=(), camera=(), usb=(), payment=(), magnetometer=(), gyroscope=()"
     
-    # Content Security Policy (CSP)
-    # Allows: Your own scripts, inline styles (for now), images from anywhere, Google Sheets connection
+    # Content Security Policy (CSP) - CORRECTED
+    # Allows: Your own scripts, inline styles, images, AND Google Sheets/Docs connection
     Content-Security-Policy = '''
       default-src 'self';
       script-src 'self' 'unsafe-inline';
       style-src 'self' 'unsafe-inline';
       img-src 'self' data: https:;
-      connect-src 'self' https://docs.google.com;
+      connect-src 'self' https://docs.google.com https://*.googleapis.com;
       font-src 'self';
       object-src 'none';
       base-uri 'self';
@@ -38,16 +38,3 @@
     # Strict Transport Security (HSTS)
     # Force HTTPS for 1 year
     Strict-Transport-Security = "max-age=31536000; includeSubDomains; preload"
-
-# Redirect Configuration (optional)
-# Uncomment if you want to force HTTPS
-# [[redirects]]
-#   from = "http://higgins-sports-schedule.netlify.app/*"
-#   to = "https://higgins-sports-schedule.netlify.app/:splat"
-#   status = 301
-#   force = true
-
-# Build Settings (if you have a build process)
-# [build]
-#   publish = "."
-#   command = "echo 'No build needed - static site'"
